fixed issue on not showing the sidebar on desktop when not active

--- a/resources/sass/admin/_animations.scss
+++ b/resources/sass/admin/_animations.scss
@@ -1,4 +1,9 @@
-.can-fade {
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
 }
 
 @keyframes fade-in {
