--- a/resources/sass/admin/_globals.scss
+++ b/resources/sass/admin/_globals.scss
@@ -3,10 +3,10 @@
 .hide-for-mobile {
   display: block;
   @media (max-width: $md-breakpoint-width){
-      display: none;   
+    display: none;
   }
 }
-  
+
 .hide-for-desktop {
   display: block;
   @media (min-width: $md-breakpoint-width){
@@ -14,16 +14,20 @@
   }
 }
 
-.overlay {
-    position: fixed;
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-    background-color: rgba(0, 0, 0, 0.687);
-    z-index: 9000;
+@media (max-width: #{$md-breakpoint-width}) {
+
+    #overlay {
+        position: fixed;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+        background-color: rgba(0, 0, 0, 0.687);
+        z-index: $overlay_zindex;
+    }
+
 }
 
 .cursor-pointer{
-    cursor: pointer;
+  cursor: pointer;
 }
